; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_move.c_validate_cheight.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_move.c_validate_cheight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64, %struct.TYPE_4__, i32, i64, i64 }
%struct.TYPE_4__ = type { i64 }

@curwin = common dso_local global %struct.TYPE_5__* null, align 8
@VALID_CHEIGHT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @validate_cheight to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @validate_cheight() #0 {
  %1 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %2 = call i32 @check_cursor_moved(%struct.TYPE_5__* %1)
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @VALID_CHEIGHT, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %22, label %9

9:                                                ; preds = %0
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i64 @plines(i64 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 4
  store i64 %14, i64* %16, align 8
  %17 = load i32, i32* @VALID_CHEIGHT, align 4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = or i32 %20, %17
  store i32 %21, i32* %19, align 8
  br label %22

22:                                               ; preds = %9, %0
  ret void
}

declare dso_local i32 @check_cursor_moved(%struct.TYPE_5__*) #1

declare dso_local i64 @plines(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
